--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get_it: ^8.1.0
   go_router: ^7.0.1
   bloc: ^8.1.0
+  image_picker: ^0.8.7+4
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -49,8 +52,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
